rdo/app/rdo_console/trunk/test/syntax_error/syntax_error.rtestx
<?xml version="1.0"?>
<test>
    <model>syntax_error.rdox</model>
    <target>CONSOLE</target>
    <exit_code>3</exit_code>
    <trace></trace>
    <result></result>
    <log_compilation>syntax_error.rlog</log_compilation>
</test>